# slosh

./: LICENSE  clean.py  docker-compose.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260515_0001_init_auth_and_users.py  20260515_0002_add_user_role.py  20260515_0003_move_rbac_policy_to_db.py  20260515_0004_move_user_role_links_to_casbin.py  20260518_0005_add_user_settings.py  20260518_0005_init_taskiq.py
backend/app/: cli.py  main.py
backend/app/api/: deps.py  error_handlers.py  responses.py  router.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  rbac.py  settings.py  tasks.py  (+1 more)
backend/app/core/: exceptions.py  logging.py  middleware.py  rbac.py  security.py
backend/app/core/settings/: __init__.py  base.py  environments.py
backend/app/crud/: base.py  user.py
backend/app/db/: base.py  database.py
backend/app/models/: base.py  casbin_rule.py  enums.py  user.py
backend/app/rbac/: default_policy.py
backend/app/schemas/: auth.py  common.py  rbac.py  settings.py  task.py  user.py
backend/app/services/: auth_service.py  rbac_service.py  settings_service.py  task_service.py  user_service.py
backend/app/task/: __init__.py  broker.py  tasks.py  worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_rbac.py  test_settings.py  test_tasks.py  test_users.py
backend/tests/unit/: test_cli.py  test_logging.py  test_security.py
(+25 files in other folders)
